--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2><span>Try it free 7 days</span> then $20/mo. thereafter</h2>
       </div>
       <div class="info">
-        <form action="">
+        <form>
           <div class="form-element">
             <input type="text" placeholder="First Name" id="firstName">
             <h4>Error Message</h4>
